# dousi

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: main.yml
cmake/Modules/: MsgpackExternalProject.cmake
core/: CMakeLists.txt  run_all_tests.sh
core/benchmarks/single_node/: Qps.h  benchmark_client.cc  benchmark_multi_threads_client.cc  benchmark_server.cc  benchmark_service.h  qps.h
core/cmake/Modules/: CMakeUtils.cmake
core/examples/: client.cc  server.cc
core/src/: README.md
core/src/common/: endpoint.cc  endpoint.h  logging.h  msgpack_utils.h  utils.h
core/src/common/id/: service_id.h
core/src/core/: dousi.h  runtime_context.h
core/src/core/common/: boost_lock_free_queue.h  concurrent_queue.h  function_traits.h  options.h  remote_annotation.h  std_locked_queue.h  tuple_traits.h
core/src/core/executor/: api.h  connection_session.cc  connection_session.h  dousi_request.h  dousi_service.h  executor.cc  executor.h  executor_runtime.cc  executor_runtime.h  service_manager.h  worker_pool.h
core/src/core/stream/: stream.cc  stream.h
core/src/core/submitter/: api.h  dousi_future.h  service_handle.h  submitter.h  submitter_runtime.cc  submitter_runtime.h
core/src/jni/: native_java_client.h  org_dousi_client_NativeRpcClient.cc  org_dousi_client_NativeRpcClient.h
core/src/master/: master_test.cc
core/src/runtime/direct/: rpc_client.h  rpc_server.h
core/src/runtime/distributed/master/: master_client.cc  master_client.h  master_client_main.cc  master_server.cc  master_server.h  master_server_main.cc  master_service.h  master_test.cc
core/src/runtime/distributed/master/client/: master_client.cc  master_client.h
core/src/runtime/distributed/master/server/: master_client_session.h  master_server.cc  master_server.h
core/src/runtime/master/: master_client_main.cc  master_server_main.cc  master_test.cc
core/src/runtime/master/client/: master_client.cc
core/src/runtime/master/server/: master_client_session.h
core/src/stream/: stream.cc  stream.h
core/tests/: basic_call_test.cc  concurrent_queue_test.cc  method_macro_test.cc  multiple_calls_with_no_wait.cc  nameof_test.cc
core/tests/distributed/: processor1_main.cc
core/tests/test_utils/: basic_server_for_test.cc  basic_services.h
cpp/benchmarks/single_node/: benchmark_client.cc  benchmark_multi_threads_client.cc  benchmark_server.cc  benchmark_service.h
cpp/examples/: client.cc  server.cc
cpp/src/: build.sh
cpp/src/core/common/: tuple_traits.h
cpp/src/core/executor/: abstract_service.h  dousi_request.h  dousi_service.h  executor.h
cpp/src/core/submitter/: service_handle.h  submitter.h
cpp/src/jni/: org_dousi_client_NativeRpcClient.cc
cpp/src/rpc/: rpc_client.h
cpp/src/runtime/distributed/master/: default_master_server_main.cc  master_client.h  master_server.cc  master_test.cc
cpp/src/runtime/distributed/processor/: processor.h
cpp/tests/: basic_call_test.cc  logging_test.cc  multiple_calls_with_no_wait.cc
cpp/tests/test_utils/: basic_server_for_test.cc  basic_services.h
docs/: dousi_protocol.md
docs/api_specification/ipc/: cpp.md
java/: README.md  build_native_libraries.sh  pom.xml
java/api/: pom.xml
java/common/: pom.xml
java/common/src/main/java/org/dousi/common/: DousiConstants.java
java/common/src/main/java/org/dousi/common/schema/: SignatureUtils.java
java/examples/: pom.xml
java/examples/src/main/java/org/dousi/examples/adder/: AdderServiceImpl.java  ClientMain.java  ServerMain.java
java/native/: pom.xml
java/new-dousi/: pom.xml
java/new-dousi/src/main/java/org/dousi/newdousi/api/: DousiClient.java  DousiMethod2.java  DousiRuntimeType.java  DousiServer.java
java/new-dousi/src/main/java/org/dousi/newdousi/common/: DousiConstants.java  SignatureUtils.java
java/new-dousi/src/main/java/org/dousi/newdousi/runtime/: ClientCodec.java  DousiClientInNetty.java  DousiClientRuntime.java  DousiClientRuntimeChannelHandler.java  DousiRuntime.java  DousiServerInNetty.java  DousiServerRuntime.java  DousiServerRuntimeChannelHandler.java  ServerCodec.java  ServiceInfo.java
java/new-dousi/src/main/java/org/dousi/newdousi/test/: BasicTest.java
java/rpc-client/: pom.xml
java/rpc-client/src/main/java/org/dousi/client/: Codec.java  CodecTest.java  DousiAsyncFunction.java  DousiRpcClient.java  DousiRpcClientChannelHandler.java  NativeRpcClient.java  NettyRpcClient.java  ProxyHandler.java
java/rpc-client/src/main/java/org/dousi/utils/: JniUtils.java  LibraryFileUtils.java
java/rpc-client/src/test/java/org/dousi/test/: BasicTest.java
java/rpc-server/: pom.xml
java/rpc-server/src/main/java/org/dousi/rpcserver/: RpcServer.java
java/rpc-server/src/main/java/org/dousi/server/: DousiRpcServer.java  DousiRpcServerChannelHandler.java  ServerCodec.java  ServiceInfo.java
java/runtime/: pom.xml
java/src/main/java/org/dousi/client/: DousiAsyncFunction.java  DousiService.java  DousiServiceImpl.java  ProxyHandler.java
java/src/main/java/org/dousi/common/exception/: ParserAddrException.java
java/src/main/java/org/dousi/examples/adder/: AdderService.java  ServerMain.java
java/src/main/java/org/dousi/server/: ServiceInfo.java
java/src/test/java/org/dousi/test/: BasicTest.java
java/src/test/java/org/dousi/test/innerlanguage/: BasicTest.java
java/test/: pom.xml
java/test/src/test/java/innerlanguage/: BasicTest.java
src/dousi/common/: logging.cc  logging.h  noncopyable.h
src/dousi/core/common/: boost_lock_free_queue.h  function_traits.h  options.h  std_locked_queue.h
src/dousi/core/executor/: executor.cc  io_thread_pool.h
src/dousi/core/stream/: stream.cc
src/dousi/core/submitter/: submitter.cc
src/dousi/rpc/: rpc_server.h
src/examples/: client.cc  services.h
src/tests/: basic_call_test.cc  method_macro_test.cc
src/tests/distributed/: processor2_main.cc  services.h
src/tests/test_utils/: basic_services.h
